<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/bg_layout_create_goal"
android:orientation="vertical"
android:padding="20dp"
tools:context=".CreateGoalActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/goal_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:text="@string/goal"
            android:textSize="16sp"

            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/goal_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:text="@string/gender"

            android:textSize="16sp"
            android:textColor="@color/black"
            />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/chooseDeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:onClick="showDatapicker"
            android:background="@drawable/datapicker_btn"
            android:text="@string/chooseDeadline" />

        <TextView
            android:id="@+id/goal_date"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:text=""
            android:textColor="@color/black"
             />

    </LinearLayout>

    <Button
        android:id="@+id/addGoalBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:onClick="createGoal"
        android:background="@drawable/custom_btn"
        android:text="@string/create" />
</LinearLayout>