<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".ProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingRight="0dp">

            <ImageView
                android:id="@+id/logoImg"
                android:layout_width="match_parent"
                android:layout_height="89dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/app_image_content_desc"
                app:srcCompat="@drawable/person" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/name"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/name_data"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/surname_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/surname"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/surname_data"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/mail"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/email_data"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/height_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/height"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/height_data"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weight_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/weight"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/weight_data"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gender_label"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/gender"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_btn"
                android:onClick="checkData"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="Save" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>